# SortingOutSorting

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
data/unsorted_arrays/: arrays10.txt  arrays100.txt  arrays1000.txt  arrays50.txt  arrays500.txt  arrays5000.txt
server/: arrays10.json  arrays100.json  arrays1000.json  arrays10000.json  arrays100000.json  arrays50.json  arrays500.json  arrays5000.json  arrays50000.json  arrays75000.json  columngraph10.json  columngraph100.json  columngraph1000.json  columngraph10000.json  columngraph100000.json  columngraph50.json  columngraph500.json  columngraph5000.json  columngraph50000.json  columngraph75000.json  graph.json  index.html  linegraph.json
src/: CMakeLists.txt  SortingOutSorting.h  algorithms.cpp  main.cpp
